# wordle-bot

./: .gitignore  pyproject.toml
examples/: FrequencyBot.ipynb
tests/: test_wordle.py  test_wordle_bot.py
wordle_bot/: bots.py  wordle.py
