[tool.poetry]
name = "wordle-bot"
version = "0.1.0"
description = ""
authors = ["Will Carter <wtjcarter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
english-words = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.10.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
